--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>8/1 ♾️ | R & M</title>
     <style>
-        :root {
-            --heart-color: #ff0000;
-            --accent: #ff4d4d;
-        }
-
         body {
             background-color: #050505;
             color: white;
@@ -26,127 +21,110 @@
         }
 
         .header {
-            font-size: 3.5rem;
+            font-size: 3rem;
             margin-bottom: 20px;
-            font-weight: bold;
-            color: var(--accent);
-            text-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+            color: #ff4d4d;
+            text-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
         }
 
-        /* العداد الاحترافي */
         #timer {
             display: flex;
-            gap: 20px;
-            background: rgba(255, 255, 255, 0.05);
-            padding: 30px;
-            border-radius: 20px;
+            gap: 15px;
+            background: rgba(255, 255, 255, 0.07);
+            padding: 20px 40px;
+            border-radius: 15px;
             border: 1px solid rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
-        .unit {
-            text-align: center;
-            min-width: 90px;
-        }
+        .unit { text-align: center; min-width: 70px; }
+        .num { font-size: 2.5rem; font-weight: bold; display: block; }
+        .label { font-size: 0.8rem; color: #ff4d4d; }
 
-        .unit .num {
-            font-size: 3rem;
-            font-weight: bold;
-            display: block;
-        }
-
-        .unit .label {
-            font-size: 0.8rem;
-            color: var(--accent);
-            text-transform: uppercase;
-        }
-
-        /* منطقة النبض والقلب */
-        .heart-area {
+        /* منطقة القلب والنبض */
+        .heart-section {
             display: flex;
             align-items: center;
             width: 90%;
-            max-width: 900px;
+            max-width: 700px;
             position: relative;
         }
 
-        .pulse-line {
-            flex-grow: 1;
-            height: 150px;
+        /* خط النبض الحقيقي */
+        .pulse-svg {
+            flex: 1;
+            height: 100px;
         }
 
-        .path {
+        .pulse-path {
             fill: none;
-            stroke: var(--heart-color);
+            stroke: #ff0000;
             stroke-width: 3;
+            stroke-linecap: round;
             stroke-dasharray: 1000;
             stroke-dashoffset: 1000;
-            animation: draw 3s linear infinite;
+            animation: draw 2.5s linear infinite;
         }
 
         @keyframes draw { to { stroke-dashoffset: 0; } }
 
-        /* القلب الواقعي */
-        .heart-box {
+        /* حاوية القلب */
+        .heart-container {
             position: relative;
-            width: 180px;
-            height: 180px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 150px;
+            height: 150px;
+            margin-right: -20px;
         }
 
         .real-heart {
-            width: 100%;
-            filter: drop-shadow(0 0 20px red);
-            animation: beat 0.8s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+            width: 150px;
+            filter: drop-shadow(0 0 20px #ff0000);
+            animation: heartBeat 0.85s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
         }
 
-        /* حرف R و M بشكل انفينيتي */
+        /* الحروف داخل القلب */
         .initials {
             position: absolute;
-            font-size: 1.8rem;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 1.4rem;
             font-weight: bold;
             color: white;
-            text-shadow: 0 0 10px black;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
             display: flex;
             align-items: center;
-            gap: 5px;
-            z-index: 10;
+            gap: 4px;
+            z-index: 5;
+            pointer-events: none;
         }
 
-        .infinity-symbol {
-            font-size: 2.2rem;
-            color: var(--accent);
-        }
-
-        @keyframes beat {
+        @keyframes heartBeat {
             0% { transform: scale(1); }
             20% { transform: scale(1.15); }
-            40% { transform: scale(1.05); }
-            60% { transform: scale(1.2); }
+            40% { transform: scale(1.08); }
+            60% { transform: scale(1.25); }
             100% { transform: scale(1); }
         }
 
-        /* كلمة بحبك المتناغمة */
-        .love-pop {
+        /* كلمة بحبك */
+        .love-text {
             position: absolute;
-            right: 0;
-            top: -40px;
-            color: var(--accent);
+            top: -50px;
+            right: 40px;
+            color: #ff4d4d;
+            font-size: 1.8rem;
             font-weight: bold;
-            font-size: 1.5rem;
             opacity: 0;
+            text-shadow: 0 0 10px white;
         }
 
-        .pop-animation {
-            animation: fly 0.8s ease-out;
-        }
+        .floating { animation: floatLove 0.85s ease-out; }
 
-        @keyframes fly {
+        @keyframes floatLove {
             0% { opacity: 1; transform: translateY(0); }
-            100% { opacity: 0; transform: translateY(-100px); }
+            100% { opacity: 0; transform: translateY(-80px) scale(1.3); }
         }
     </style>
 </head>
@@ -161,40 +139,42 @@
         <div class="unit"><span class="num" id="s">00</span><span class="label">ثانية</span></div>
     </div>
 
-    <div class="heart-area">
-        <svg class="pulse-line" viewBox="0 0 500 100">
-            <path class="path" d="M0,50 L150,50 L160,30 L175,70 L190,50 L300,50 L310,10 L330,90 L350,50 L500,50" />
+    <div class="heart-section">
+        <svg class="pulse-svg" viewBox="0 0 400 100">
+            <path class="pulse-path" d="M0,50 L150,50 L160,20 L175,80 L190,50 L250,50 L260,10 L280,90 L300,50 L400,50" />
         </svg>
 
-        <div class="heart-box">
-            <div id="pop-text" class="love-pop">بحبك</div>
-            <div class="initials">R <span class="infinity-symbol">∞</span> M</div>
-            <img src="https://cdn-icons-png.flaticon.com/512/3233/3233481.png" class="real-heart" alt="Real Heart">
+        <div class="heart-container">
+            <div id="love" class="love-text">بحبك</div>
+            <div class="initials">R <span style="color:#ff4d4d">∞</span> M</div>
+            <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Heart%20with%20Arrow.png" class="real-heart" id="heartImg" alt="Heart">
         </div>
     </div>
 
     <script>
+        // رابط صورة قلب تشريحي واقعي جداً
+        document.getElementById('heartImg').src = "https://cdn-icons-png.flaticon.com/512/822/822118.png";
+
         const start = new Date("January 8, 2025 00:00:00").getTime();
 
-        function update() {
+        function updateTimer() {
             const now = new Date().getTime();
             const diff = now - start;
-
             document.getElementById("d").innerText = Math.floor(diff / (1000 * 60 * 60 * 24));
             document.getElementById("h").innerText = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             document.getElementById("m").innerText = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
             document.getElementById("s").innerText = Math.floor((diff % (1000 * 60)) / 1000);
         }
 
-        const pop = document.getElementById("pop-text");
+        const love = document.getElementById("love");
         setInterval(() => {
-            pop.classList.remove("pop-animation");
-            void pop.offsetWidth;
-            pop.classList.add("pop-animation");
-        }, 800);
+            love.classList.remove("floating");
+            void love.offsetWidth;
+            love.classList.add("floating");
+        }, 850);
 
-        setInterval(update, 1000);
-        update();
+        setInterval(updateTimer, 1000);
+        updateTimer();
     </script>
 </body>
 </html>
