--- a/index.html
+++ b/index.html
@@ -4,174 +4,196 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8/1 ♾️ | R & M</title>
+    <title>8/1 ♾️ | R&M</title>
     <style>
+        :root {
+            --red: #ff0000;
+            --dark-red: #8b0000;
+        }
+
         body {
-            background-color: #050505;
-            color: white;
-            font-family: 'Arial', sans-serif;
+            background: radial-gradient(circle at center, #1a0202 0%, #000 100%);
+            color: #fff;
             margin: 0;
             height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             overflow: hidden;
-            background: radial-gradient(circle, #200505 0%, #050505 100%);
         }
 
-        .header {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            color: #ff4d4d;
-            text-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
+        /* العنوان العلوي */
+        .title-top {
+            font-size: 3.5rem;
+            color: var(--red);
+            text-shadow: 0 0 20px rgba(255, 0, 0, 0.6);
+            margin-bottom: 10px;
+            font-weight: bold;
         }
 
-        #timer {
+        /* العداد الاحترافي */
+        .timer-container {
             display: flex;
-            gap: 15px;
-            background: rgba(255, 255, 255, 0.07);
-            padding: 20px 40px;
-            border-radius: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            margin-bottom: 60px;
+            gap: 20px;
+            background: rgba(255, 255, 255, 0.03);
+            padding: 25px 45px;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 0, 0, 0.2);
+            box-shadow: 0 0 30px rgba(0,0,0,0.8);
+            margin-bottom: 50px;
+            backdrop-filter: blur(5px);
         }
 
-        .unit { text-align: center; min-width: 70px; }
-        .num { font-size: 2.5rem; font-weight: bold; display: block; }
-        .label { font-size: 0.8rem; color: #ff4d4d; }
+        .unit { text-align: center; min-width: 80px; }
+        .num { font-size: 3rem; font-weight: 900; display: block; color: #fff; }
+        .label { font-size: 0.9rem; color: var(--red); font-weight: bold; }
 
         /* منطقة القلب والنبض */
-        .heart-section {
+        .heart-system {
             display: flex;
             align-items: center;
             width: 90%;
-            max-width: 700px;
+            max-width: 800px;
             position: relative;
         }
 
-        /* خط النبض الحقيقي */
-        .pulse-svg {
+        /* خط النبض الحقيقي ECG */
+        .ecg-line {
             flex: 1;
-            height: 100px;
+            height: 120px;
         }
 
-        .pulse-path {
+        .ecg-path {
             fill: none;
-            stroke: #ff0000;
+            stroke: var(--red);
             stroke-width: 3;
-            stroke-linecap: round;
             stroke-dasharray: 1000;
             stroke-dashoffset: 1000;
-            animation: draw 2.5s linear infinite;
+            animation: moveLine 3s linear infinite;
         }
 
-        @keyframes draw { to { stroke-dashoffset: 0; } }
+        @keyframes moveLine { to { stroke-dashoffset: 0; } }
 
-        /* حاوية القلب */
-        .heart-container {
+        /* القلب الواقعي */
+        .heart-wrap {
             position: relative;
-            width: 150px;
-            height: 150px;
-            margin-right: -20px;
-        }
-
-        .real-heart {
-            width: 150px;
-            filter: drop-shadow(0 0 20px #ff0000);
-            animation: heartBeat 0.85s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-
-        /* الحروف داخل القلب */
-        .initials {
-            position: absolute;
-            top: 55%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+            width: 180px;
+            height: 180px;
             display: flex;
             align-items: center;
-            gap: 4px;
-            z-index: 5;
-            pointer-events: none;
+            justify-content: center;
         }
 
-        @keyframes heartBeat {
+        .anatomical-heart {
+            width: 160px;
+            filter: drop-shadow(0 0 15px var(--red));
+            z-index: 2;
+            /* حركة نبض حقيقية مزدوجة */
+            animation: realBeat 0.8s infinite cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        @keyframes realBeat {
             0% { transform: scale(1); }
-            20% { transform: scale(1.15); }
-            40% { transform: scale(1.08); }
-            60% { transform: scale(1.25); }
+            15% { transform: scale(1.18); }
+            30% { transform: scale(1.05); }
+            45% { transform: scale(1.25); }
             100% { transform: scale(1); }
         }
 
-        /* كلمة بحبك */
-        .love-text {
+        /* دمج R & M مع الانفينيتي مرسومة */
+        .infinity-letters {
             position: absolute;
-            top: -50px;
-            right: 40px;
-            color: #ff4d4d;
-            font-size: 1.8rem;
-            font-weight: bold;
-            opacity: 0;
-            text-shadow: 0 0 10px white;
+            z-index: 5;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100px;
+            pointer-events: none;
         }
 
-        .floating { animation: floatLove 0.85s ease-out; }
+        .infinity-svg {
+            width: 100%;
+            fill: none;
+            stroke: #fff;
+            stroke-width: 4;
+            filter: drop-shadow(0 0 5px #000);
+        }
 
-        @keyframes floatLove {
-            0% { opacity: 1; transform: translateY(0); }
-            100% { opacity: 0; transform: translateY(-80px) scale(1.3); }
+        /* كلمة بحبك */
+        .love-burst {
+            position: absolute;
+            right: 0;
+            top: -40px;
+            color: #ff4d4d;
+            font-size: 2rem;
+            font-weight: bold;
+            opacity: 0;
+            text-shadow: 0 0 10px #fff;
+        }
+
+        .animate-love { animation: burst 0.8s ease-out; }
+
+        @keyframes burst {
+            0% { opacity: 0; transform: scale(0.5) translateY(0); }
+            50% { opacity: 1; transform: scale(1.2) translateY(-50px); }
+            100% { opacity: 0; transform: scale(1.5) translateY(-100px); }
         }
     </style>
 </head>
 <body>
 
-    <div class="header">8/1 ♾️</div>
+    <div class="title-top">8/1 ♾️</div>
 
-    <div id="timer">
-        <div class="unit"><span class="num" id="d">00</span><span class="label">يوم</span></div>
-        <div class="unit"><span class="num" id="h">00</span><span class="label">ساعة</span></div>
-        <div class="unit"><span class="num" id="m">00</span><span class="label">دقيقة</span></div>
-        <div class="unit"><span class="num" id="s">00</span><span class="label">ثانية</span></div>
+    <div class="timer-container">
+        <div class="unit"><span class="num" id="days">00</span><span class="label">يوم</span></div>
+        <div class="unit"><span class="num" id="hours">00</span><span class="label">ساعة</span></div>
+        <div class="unit"><span class="num" id="minutes">00</span><span class="label">دقيقة</span></div>
+        <div class="unit"><span class="num" id="seconds">00</span><span class="label">ثانية</span></div>
     </div>
 
-    <div class="heart-section">
-        <svg class="pulse-svg" viewBox="0 0 400 100">
-            <path class="pulse-path" d="M0,50 L150,50 L160,20 L175,80 L190,50 L250,50 L260,10 L280,90 L300,50 L400,50" />
+    <div class="heart-system">
+        <svg class="ecg-line" viewBox="0 0 400 100">
+            <path class="ecg-path" d="M0,50 L100,50 L110,30 L125,70 L140,50 L250,50 L260,10 L280,90 L300,50 L400,50" />
         </svg>
 
-        <div class="heart-container">
-            <div id="love" class="love-text">بحبك</div>
-            <div class="initials">R <span style="color:#ff4d4d">∞</span> M</div>
-            <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Heart%20with%20Arrow.png" class="real-heart" id="heartImg" alt="Heart">
+        <div class="heart-wrap">
+            <div id="loveText" class="love-burst">بحبك</div>
+            
+            <div class="infinity-letters">
+                <svg class="infinity-svg" viewBox="0 0 100 50">
+                    <path d="M30,25 C30,10 45,10 50,25 C55,40 70,40 70,25 C70,10 55,10 50,25 C45,40 30,40 30,25" stroke="#ff4d4d" stroke-width="3"/>
+                    <text x="12" y="32" fill="white" font-size="18" font-weight="bold" font-family="Arial">R</text>
+                    <text x="75" y="32" fill="white" font-size="18" font-weight="bold" font-family="Arial">M</text>
+                </svg>
+            </div>
+
+            <img src="https://cdn-icons-png.flaticon.com/512/822/822118.png" class="anatomical-heart" alt="Real Heart">
         </div>
     </div>
 
     <script>
-        // رابط صورة قلب تشريحي واقعي جداً
-        document.getElementById('heartImg').src = "https://cdn-icons-png.flaticon.com/512/822/822118.png";
-
-        const start = new Date("January 8, 2025 00:00:00").getTime();
+        // العداد من 8/1/2025
+        const startDate = new Date("January 8, 2025 00:00:00").getTime();
 
         function updateTimer() {
             const now = new Date().getTime();
-            const diff = now - start;
-            document.getElementById("d").innerText = Math.floor(diff / (1000 * 60 * 60 * 24));
-            document.getElementById("h").innerText = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            document.getElementById("m").innerText = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-            document.getElementById("s").innerText = Math.floor((diff % (1000 * 60)) / 1000);
+            const diff = now - startDate;
+
+            document.getElementById("days").innerText = Math.floor(diff / (1000 * 60 * 60 * 24));
+            document.getElementById("hours").innerText = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            document.getElementById("minutes").innerText = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+            document.getElementById("seconds").innerText = Math.floor((diff % (1000 * 60)) / 1000);
         }
 
-        const love = document.getElementById("love");
+        // مزامنة كلمة بحبك مع النبض الطبيعي
+        const love = document.getElementById("loveText");
         setInterval(() => {
-            love.classList.remove("floating");
-            void love.offsetWidth;
-            love.classList.add("floating");
-        }, 850);
+            love.classList.remove("animate-love");
+            void love.offsetWidth; 
+            love.classList.add("animate-love");
+        }, 800);
 
         setInterval(updateTimer, 1000);
         updateTimer();
