--- a/index.html
+++ b/index.html
@@ -4,191 +4,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8/1 ♾️ | R&M</title>
+    <title>8/1 ♾️ | R & M</title>
     <style>
+        :root { --red: #ff0000; --bg: #050000; }
         body {
-            background-color: #050505;
-            color: white;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            background: radial-gradient(circle, #1a0505 0%, #000 100%);
+            background: radial-gradient(circle at center, #1a0505 0%, var(--bg) 100%);
+            color: white; margin: 0; height: 100vh;
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            font-family: 'Segoe UI', sans-serif; overflow: hidden;
         }
 
-        /* العنوان */
-        .header-title {
-            font-size: 3rem;
-            color: #ff3333;
-            text-shadow: 0 0 15px rgba(255, 51, 51, 0.5);
-            margin-bottom: 20px;
+        .header { font-size: 3rem; color: var(--red); text-shadow: 0 0 20px rgba(255,0,0,0.5); margin-bottom: 20px; }
+
+        /* العداد */
+        .counter {
+            display: flex; gap: 20px; background: rgba(255,255,255,0.03);
+            padding: 30px; border-radius: 20px; border: 1px solid rgba(255,0,0,0.2);
+            backdrop-filter: blur(10px); margin-bottom: 50px;
         }
+        .unit { text-align: center; min-width: 80px; }
+        .num { font-size: 3rem; font-weight: 900; display: block; }
+        .label { font-size: 0.8rem; color: var(--red); font-weight: bold; }
 
-        /* العداد الاحترافي */
-        #timer {
-            display: flex;
-            gap: 20px;
-            background: rgba(255, 255, 255, 0.05);
-            padding: 25px 40px;
-            border-radius: 20px;
-            border: 1px solid rgba(255, 51, 51, 0.2);
-            backdrop-filter: blur(10px);
-            margin-bottom: 50px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-        }
+        /* منطقة النبض والقلب */
+        .scene { display: flex; align-items: center; width: 90%; max-width: 800px; position: relative; }
 
-        .unit { text-align: center; min-width: 75px; }
-        .num { font-size: 3rem; font-weight: bold; display: block; color: #fff; }
-        .label { font-size: 0.8rem; color: #ff3333; font-weight: bold; }
-
-        /* منطقة القلب والنبض */
-        .heart-section {
-            display: flex;
-            align-items: center;
-            width: 85%;
-            max-width: 800px;
-            position: relative;
-        }
-
-        /* خط النبض الحقيقي */
-        .ecg-svg { flex: 1; height: 120px; }
+        /* خط النبض ECG */
+        .ecg { flex: 1; height: 100px; }
         .ecg-path {
-            fill: none; stroke: #ff0000; stroke-width: 3;
+            fill: none; stroke: var(--red); stroke-width: 3;
             stroke-dasharray: 1000; stroke-dashoffset: 1000;
-            animation: ecg-draw 2.5s linear infinite;
+            animation: draw 2.5s linear infinite;
         }
-        @keyframes ecg-draw { to { stroke-dashoffset: 0; } }
+        @keyframes draw { to { stroke-dashoffset: 0; } }
 
-        /* حاوية القلب */
-        .heart-container {
-            position: relative;
-            width: 180px;
-            height: 180px;
-        }
-
-        /* القلب التشريحي الواقعي */
-        .real-anatomical-heart {
-            width: 100%;
-            filter: drop-shadow(0 0 15px #ff0000);
-            /* نبض بشري حقيقي: انقباض ثنائي */
-            animation: human-beat 0.85s infinite; 
-            z-index: 1;
+        /* القلب المرسوم بالكود SVG */
+        .heart-svg {
+            width: 200px; height: 200px; filter: drop-shadow(0 0 15px var(--red));
+            animation: realBeat 0.85s infinite cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
-        @keyframes human-beat {
-            0% { transform: scale(1); }
+        @keyframes realBeat {
+            0%, 100% { transform: scale(1); }
             15% { transform: scale(1.15); }
             30% { transform: scale(1.05); }
             45% { transform: scale(1.2); }
-            100% { transform: scale(1); }
         }
 
-        /* دمج R و M مع الانفينيتي */
-        .brand-overlay {
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 10;
-            text-align: center;
-            pointer-events: none;
-            width: 120px;
-        }
-
-        .infinity-design {
-            font-size: 1.5rem;
-            font-weight: 900;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 2px;
-            text-shadow: 0 0 10px #000, 0 0 5px #ff0000;
-        }
-
-        .infinity-symbol {
-            font-size: 2.2rem;
-            color: #ff3333;
-            line-height: 0;
-            margin: 0 -5px;
+        /* دمج R & M مع Infinity */
+        .infinity-brand {
+            position: absolute; top: 60%; left: 50%; transform: translate(-50%, -50%);
+            z-index: 10; width: 100px;
         }
 
         /* كلمة بحبك */
-        .love-msg {
-            position: absolute;
-            right: 0;
-            top: -50px;
-            color: #ff4d4d;
-            font-size: 2rem;
-            font-weight: bold;
-            opacity: 0;
-            text-shadow: 0 0 10px #fff;
+        .love-text {
+            position: absolute; right: 20px; top: -50px; color: var(--red);
+            font-size: 2rem; font-weight: bold; opacity: 0; text-shadow: 0 0 10px #fff;
         }
-        .pop { animation: pop-up 0.85s ease-out; }
-        @keyframes pop-up {
-            0% { opacity: 0; transform: translateY(0) scale(0.5); }
-            50% { opacity: 1; transform: translateY(-70px) scale(1.2); }
-            100% { opacity: 0; transform: translateY(-130px) scale(1.5); }
+        .animate-love { animation: floatUp 0.85s ease-out; }
+        @keyframes floatUp {
+            0% { opacity: 1; transform: translateY(0); }
+            100% { opacity: 0; transform: translateY(-100px) scale(1.5); }
         }
     </style>
 </head>
 <body>
 
-    <div class="header-title">8/1 ♾️</div>
+    <div class="header">8/1 ♾️</div>
 
-    <div id="timer">
+    <div class="counter">
         <div class="unit"><span class="num" id="d">00</span><span class="label">يوم</span></div>
         <div class="unit"><span class="num" id="h">00</span><span class="label">ساعة</span></div>
         <div class="unit"><span class="num" id="m">00</span><span class="label">دقيقة</span></div>
         <div class="unit"><span class="num" id="s">00</span><span class="label">ثانية</span></div>
     </div>
 
-    <div class="heart-section">
-        <svg class="ecg-svg" viewBox="0 0 400 100">
-            <path class="ecg-path" d="M0,50 L100,50 L110,25 L125,75 L140,50 L250,50 L260,10 L280,90 L300,50 L400,50" />
+    <div class="scene">
+        <svg class="ecg" viewBox="0 0 400 100">
+            <path class="ecg-path" d="M0,50 L120,50 L130,20 L145,80 L160,50 L250,50 L260,0 L280,100 L300,50 L400,50" />
         </svg>
 
-        <div class="heart-container">
-            <div id="love" class="love-msg">بحبك</div>
+        <div style="position: relative;">
+            <div id="pop" class="love-text">بحبك</div>
             
-            <div class="brand-overlay">
-                <div class="infinity-design">
-                    <span>R</span>
-                    <span class="infinity-symbol">∞</span>
-                    <span>M</span>
-                </div>
-            </div>
+            <svg class="heart-svg" viewBox="0 0 200 200">
+                <path d="M90,30 Q100,10 110,30 T130,50" fill="none" stroke="#660000" stroke-width="8"/>
+                <path d="M100,20 V50" stroke="#440000" stroke-width="12"/>
+                <path fill="#a30000" d="M100,170 C100,170 40,140 40,90 C40,60 60,45 80,45 C90,45 100,55 100,55 S110,45 120,45 C140,45 160,60 160,90 C160,140 100,170 100,170 Z" />
+                <path fill="#ff0000" opacity="0.6" d="M100,160 C100,160 50,130 50,90 C50,70 65,55 80,55 C90,55 100,65 100,65 S110,55 120,55 C135,55 150,70 150,90 C150,130 100,160 100,160 Z" />
+                <path d="M110,60 Q120,80 140,90" fill="none" stroke="#550000" stroke-width="3" opacity="0.5"/>
+            </svg>
 
-            <img src="https://cdn-icons-png.flaticon.com/512/822/822118.png" class="real-anatomical-heart" alt="Real Heart">
+            <svg class="infinity-brand" viewBox="0 0 100 50">
+                <path d="M30,25 C30,15 45,15 50,25 C55,35 70,35 70,25 C70,15 55,15 50,25 C45,35 30,35 30,25" fill="none" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                <text x="10" y="32" fill="white" font-size="16" font-weight="bold">R</text>
+                <text x="75" y="32" fill="white" font-size="16" font-weight="bold">M</text>
+            </svg>
         </div>
     </div>
 
     <script>
-        // تاريخ البداية
         const start = new Date("January 8, 2025 00:00:00").getTime();
-
         function update() {
-            const now = new Date().getTime();
-            const diff = now - start;
-
-            document.getElementById("d").innerText = Math.floor(diff / (1000 * 60 * 60 * 24));
-            document.getElementById("h").innerText = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            document.getElementById("m").innerText = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-            document.getElementById("s").innerText = Math.floor((diff % (1000 * 60)) / 1000);
+            const diff = new Date().getTime() - start;
+            document.getElementById("d").innerText = Math.floor(diff / 86400000);
+            document.getElementById("h").innerText = Math.floor((diff % 86400000) / 3600000);
+            document.getElementById("m").innerText = Math.floor((diff % 3600000) / 60000);
+            document.getElementById("s").innerText = Math.floor((diff % 60000) / 1000);
         }
-
-        // تزامن كلمة بحبك مع النبض
-        const loveWord = document.getElementById("love");
         setInterval(() => {
-            loveWord.classList.remove("pop");
-            void loveWord.offsetWidth;
-            loveWord.classList.add("pop");
+            const p = document.getElementById("pop");
+            p.classList.remove("animate-love");
+            void p.offsetWidth;
+            p.classList.add("animate-love");
         }, 850);
-
         setInterval(update, 1000);
         update();
     </script>
